<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 
    	程序相关信息
     -->
    <string name="app_name">存在</string>
    <string name="diary_info">存在的证明</string>
    <string name="diary_version">版本号：0.1.1</string>
    <string name="app_designer">Design By SZ/CZT</string>
    <string name="designer_website"><a href="http://sz-zeng.lofter.com">LOFTER</a></string>
    <string name="activity_info_textView_update_logs">更新日志</string>
    <!--
       程序-按钮
    -->
    <string name="insert_date">插入日期</string>
    <string name="diary_lable">标题</string>
    <string name="action_setting">设置</string>
    <string name="insert_diary">新建</string>
    <string name="diary_about">关于</string>
    <string name="diary_exit">退出</string>
    <string name="diary_save">保存</string>
    <string name="diary_update">修改</string>
    <string name="diary_delete">删除</string>
    <string name="diary_label_def">未命名</string>
    <string name="diary_list">返回</string>
    <!-- 
    	程序-activity的标题
    -->
    <string name="title_activity_list">存在</string>
    <string name="title_activity_profile">了解自己</string>
    <string name="title_activity_person">重视的人</string>
    <string name="title_activity_insert">新建日记</string>
    <string name="title_activity_detail">日记详情</string>
    <string name="title_activity_update">修改日记</string>
    <string name="title_activity_info">关于</string>
    <string name="search">搜索</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_sync">同步到云端</string>
    <!--
        设置页面与日记锁页面
    -->
    <string name="password">123</string>
    <string name="finderror">未查找到相应日记！</string>
    <string name="lock_hint">请输入密码</string>
    <string name="lock_button">解锁</string>
    <!--
        更新日志dialog界面
    -->
    <string name="update_logs">
        ------------------v0.1.1----------------\n
        2015-3-26
    </string>
    <string name="title_alertDialog">更新日志</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_backup">日记备份</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="backup_content">
        本日记软件的日记数据保存在SD卡根目录下diary文件夹下；\n
        具体路径“/diary/diary.db3”；\n
        如需备份日记数据，请把diary.db3文件保存在电脑上或者其他安全的地方。\n
        恢复日记时只需将diary.db3文件放在原位置即sd卡中的diary文件夹下，即可恢复。</string>
    <string name="title_activity_trash">垃圾桶</string>
    <string name="trash_delete">清空</string>
</resources>
